Fix List Alignment

--- a/src/public/js/components/item/item_styles.css
+++ b/src/public/js/components/item/item_styles.css
@@ -1,5 +1,5 @@
 .c-item {
-    margin: .3em .1em;
+    margin: .3em .3em;
     padding: 1em;
     padding-right: 4em;
     border-radius: .3em;
