--- a/src/public/js/components/list/list_styles.css
+++ b/src/public/js/components/list/list_styles.css
@@ -19,4 +19,6 @@
     width: 100%;
     height: 2em;
     background-color: inherit;
+    text-align: left;
+    margin: .3em;
 }
